--- a/Hifdh Tracker/Lauch/Base.lproj/Main.storyboard
+++ b/Hifdh Tracker/Lauch/Base.lproj/Main.storyboard
@@ -384,14 +384,14 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="addGoalCell" id="Nl6-q5-9Ko" customClass="addGoalTableViewCell" customModule="Hifdh_Tracker" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="170" width="393" height="56.666667938232422"/>
+                                <rect key="frame" x="0.0" y="170" width="393" height="57"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Nl6-q5-9Ko" id="3eC-Ea-6X7">
-                                    <rect key="frame" x="0.0" y="0.0" width="393" height="56.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="57"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ueD-kl-vHp">
-                                            <rect key="frame" x="20" y="11" width="353" height="34.666666666666664"/>
+                                            <rect key="frame" x="20" y="11" width="353" height="35"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="gray" image="plus" catalog="system">
                                                 <color key="baseForegroundColor" name="AccentColor"/>
@@ -542,6 +542,7 @@
                         <constraints>
                             <constraint firstItem="LOC-Kp-iGu" firstAttribute="centerX" secondItem="mSc-Ol-q9R" secondAttribute="centerX" id="2Gs-Z6-hvi"/>
                             <constraint firstItem="WOk-rW-r6z" firstAttribute="leading" secondItem="mSc-Ol-q9R" secondAttribute="centerX" id="91d-Lf-fw7"/>
+                            <constraint firstItem="POW-aW-R8M" firstAttribute="height" secondItem="wfJ-hr-u4R" secondAttribute="height" multiplier="0.677419" id="9eS-6Q-RLT"/>
                             <constraint firstItem="wfJ-hr-u4R" firstAttribute="right" secondItem="7lC-ms-jtl" secondAttribute="right" id="Ee4-Vv-M1x"/>
                             <constraint firstItem="wfJ-hr-u4R" firstAttribute="centerY" secondItem="KPM-58-V8z" secondAttribute="centerY" id="HOO-Ol-HNJ"/>
                             <constraint firstItem="lvk-7m-2cK" firstAttribute="top" secondItem="s9v-vG-12n" secondAttribute="bottom" constant="15" id="J6E-Wd-ckT"/>
@@ -575,6 +576,7 @@
                         <outlet property="numberOfPagesHeightConstraint" destination="JUk-mW-DZM" id="4eK-ee-RVE"/>
                         <outlet property="numberOfPagesTextField" destination="LOC-Kp-iGu" id="i2f-yj-UGc"/>
                         <outlet property="numberOfPagesYConstraint" destination="vCi-y6-ALV" id="6Ca-qE-FRA"/>
+                        <outlet property="pagesPerLabel" destination="POW-aW-R8M" id="UYL-tD-T3T"/>
                         <outlet property="pagesPerTextField" destination="KPM-58-V8z" id="29g-h2-HLY"/>
                         <outlet property="pagesPerTimeHeightConstraint" destination="b4Y-xi-gco" id="kka-ao-C8i"/>
                         <outlet property="pagesPerYConstraint" destination="XDq-dH-bL4" id="Z9a-ku-A7Y"/>
